--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ nav span {
 /* CONTENT 1
 ----------------------------------------
 */
-
+/* Home Page */
 #why {
     background-color: #F2E5A0;
     display: flex;
@@ -151,31 +151,100 @@ nav span {
     text-decoration: underline;
 }
 
+/* About Me Page */
+
 #about_me {
     display: flex;
+    margin: 0px;
 }
 
 
 #about_me div {
     background: #F2E5A0;
-    margin: 50px;
+    margin: 50px 25px 0px 50px;
     padding: 20px;
-    width: 50%;
-    height: auto;
+    width: 640px;
+    height: 600px;
+}
+
+#about_me img {
+    margin: 50px 25px 0px 25px;
+    padding: 50px 55px 0px 0px;
 }
 
 #about_me h2 {
-    margin: 20px 40px 20px;
+    margin: 20px 40px 0px 40px;
     font-size: 3em; 
 }
 
 #about_me p {
     margin: 0px;
+    padding: 0px 20px 20px 20px;
+    font-size: 1.05em;
+}
+
+/* Gallery Page */
+
+#photos {
+    display: flex;
+    padding: 0px 70px 50px 60px;
+    
+}
+
+#photos img {
+    padding: 15px;
+}
+
+#photos div {
+    padding-top: 60px;
+}
+
+/* Podcast Page */
+
+#video {
+    background-color: #BEE0F4;
+    display: flex;
+    margin: 50px;
     padding: 20px;
+}
+
+#video div {
+    width: 50%;
+    padding: 20px;
+}
+
+#video h2 {
+    font-size: 2em;
+}
+
+#video p {
     font-size: 1.2em;
 }
 
+#video a {
+    color: #225c71;
+}
 
+/* Contact Me Page*/
+
+#contact {
+    background-color: #FA9292;
+    margin: 50px;
+    padding: 20px;
+    height: auto;
+}
+
+#contact h2 {
+    font-size: 2em;
+}
+
+#contact p {
+    font-size: 1.1em;
+}
+
+#contact a {
+    color: #225c71;
+}
 
 /* CONTENT 2
 ----------------------------------------
@@ -220,19 +289,21 @@ nav span {
     text-decoration: underline;
 }
 
+/* About Me Page*/
+
 #about_me_2 {
     display: flex;
 }
 
 #about_me_2 img {
-    margin: 50px;
-    padding: 20px;
+    margin: 0px 25px 50px 25px;
+    padding: 50px 0px 50px 55px;
 }
 
 #about_me_2  div {
     background: #F2E5A0;
-    margin: 0px 50px;
-    padding: 0px 20px;
+    margin: 0px 50px 50px 25px;
+    padding: 20px;
     width: 50%;
     height: auto;
 }
@@ -240,8 +311,9 @@ nav span {
 #about_me_2 p {
     margin: 0px;
     padding: 20px;
-    font-size: 1.2em;
+    font-size: 1.05em;
 }
+
 
 /* CONTENT 3
 ----------------------------------------
@@ -308,7 +380,8 @@ footer li {
     font-size: 1em;
 }
 
-
-
-
-
+footer li {
+    display: inline;
+    padding: 10px;
+    font-size: 1em;
+}
